--- a/css/flocking.css
+++ b/css/flocking.css
@@ -11,8 +11,8 @@ body {
   background-color: rgba(0,0,0,0.3);
   padding: 5px;
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 10px;
+  left: 10px;
   align-items: center;
 }
 
